--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="manifest" href="/manifest.json">
 
-    <title>Gravador de Áudio e Transcrição</title>
+    <title>Libras Minha Arte</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button id="recordButton">Gravar Áudio</button>
-    <button id="sendButton" disabled>Enviar Áudio</button>
     <pre id="transcription"></pre>
     
+    <!-- DONE! 5. Integrate with VLibras: https://vlibras.gov.br/doc/widget -->
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget();
+    </script>
+
     <script src="script.js"></script>
 </body>
 </html>
