--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Libras Minha Arte</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Transcritor de Áudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <button id="recordButton">Gravar Áudio</button>
-    <pre id="transcription"></pre>
+    <main>
+        <button id="startStopButton">Iniciar Gravação</button>
     
+        <audio id="audioPlayer" controls autoplay></audio>
+    
+        <button id="transcribeButton" disabled="true">Transcrever Áudio</button>
+
+        <pre id="transcriptText"></pre>
+    </main>
+
+    <script src="./js/audio-recorder.model.js"></script>
+    <script src="./js/main.js"></script>
+
     <!-- DONE! 5. Integrate with VLibras: https://vlibras.gov.br/doc/widget -->
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
@@ -22,7 +31,5 @@
     <script>
         new window.VLibras.Widget();
     </script>
-
-    <script src="script.js"></script>
 </body>
 </html>
