Alguns refatorings pra live 👊🤩

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transcritor de Áudio</title>
+    <title>Coding The Future #14</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <main>
+        <img src="./img/dio-pro.svg" alt="Logo do DIO PRO"/>
+        <h1>Coding The Future [bit.ly/CTF-14]</h1>
+        <h3>Criando um App com Acessibilidade em Libras com Machine Learning e Java</h3>
         <button id="startStopButton">Iniciar Gravação</button>
-    
         <audio id="audioPlayer" controls autoplay></audio>
-    
-        <button id="transcribeButton" disabled="true">Transcrever Áudio</button>
-
-        <pre id="transcriptText"></pre>
+        <button id="transcribeButton" disabled>Transcrever Áudio</button>
+        <p id="transcriptText"></p>
     </main>
 
     <script src="./js/audio-recorder.model.js"></script>
