--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding The Future #14</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -20,16 +21,6 @@
     <script src="./js/audio-recorder.model.js"></script>
     <script src="./js/main.js"></script>
 
-    <!-- DONE! 5. Integrate with VLibras: https://vlibras.gov.br/doc/widget -->
-    <div vw class="enabled">
-        <div vw-access-button class="active"></div>
-        <div vw-plugin-wrapper>
-            <div class="vw-plugin-top-wrapper"></div>
-        </div>
-    </div>
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>
-        new window.VLibras.Widget();
-    </script>
+    <!-- TODO: 3. Integrar com o VLibras: https://vlibras.gov.br/doc/widget -->
 </body>
 </html>
